# llm_code_app

./: README.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  requirements.txt
backend/config/: backend_manager.yaml
backend/scripts/: test_llm_backend.py
backend/src/: pyproject.toml  setup.py
backend/src/codegen_backend/: api.py  llm_backend.py
frontend/: Dockerfile
frontend/codegen_frontend/: requirements.txt  rxconfig.py
frontend/codegen_frontend/codegen_frontend/: codegen_frontend.py  state.py
